syntax = "proto3";

package proto.request;

option java_multiple_files = true;
option java_package = "com.ksfintech.proto.request";
option java_outer_classname = "RequestProto";

message HelloRequest {
  string name = 1;
  repeated string age = 2;
  string want_to_fly = 3;
}

message TestRequest {
  string name = 1;
  HelloRequest hq = 2;
}